--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -13,9 +14,124 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:id="@+id/temperatureTextView"
+        android:textSize="150sp"
+        tools:text="21"
+        android:textColor="@android:color/white"
         android:layout_centerHorizontal="true"
-        android:id="@+id/textView"
-        android:textSize="192sp"
-        tools:text="21"/>
+        android:text="21"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/degree"
+        android:layout_alignTop="@+id/temperatureTextView"
+        android:layout_toRightOf="@+id/temperatureTextView"
+        android:layout_toEndOf="@+id/temperatureTextView"
+        android:id="@+id/imageView"
+        android:layout_marginTop="50dp"/>
+
+    <TextView
+        android:text="At 21:37 it will be"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/temperatureTextView"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/timeTextView"
+        android:textColor="#7fffffff"
+        android:textSize="18sp"/>
+
+    <TextView
+        android:text="Umeå, Sweden"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/timeTextView"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/locationTextView"
+        android:layout_marginBottom="60dp"
+        android:textColor="@android:color/white"
+        android:textSize="24sp"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/clear_day"
+        android:id="@+id/iconImageView"
+        android:layout_alignBottom="@+id/locationTextView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/temperatureTextView"
+        android:weightSum="1"
+        android:id="@+id/moistureLinearLayout">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            >
+
+            <TextView
+                android:text="HUMIDITY"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/humidityLabel"
+                android:textColor="#7fffffff"
+                android:gravity="center_horizontal"/>
+
+            <TextView
+                android:text="0.88"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/humidityValue"
+                android:textColor="@android:color/white"
+                android:textSize="24sp"
+                android:gravity="center_horizontal"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5">
+
+            <TextView
+                android:text="RAIN/SNOW?"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/precipLabel"
+                android:textColor="#7fffffff"
+                android:gravity="center_horizontal"/>
+
+            <TextView
+                android:text="100%"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/precipValue"
+                android:textColor="#FFFFFFFF"
+                android:textSize="24sp"
+                android:gravity="center_horizontal"/>
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <TextView
+        android:text="Stormy with a chance of meatballs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/summaryTextView"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/moistureLinearLayout"
+        android:layout_marginTop="40dp"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:textAlignment="center"
+        android:gravity="center_horizontal"/>
 
 </RelativeLayout>
