--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,137 +1,212 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context=".MainActivity"
-                android:background="#FC970B">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             tools:context=".MainActivity"
+                                             android:background="@android:color/holo_red_light">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:id="@+id/temperatureTextView"
+        android:id="@+id/temperatureValue"
         android:textSize="150sp"
         tools:text="21"
         android:textColor="@android:color/white"
-        android:layout_centerHorizontal="true"
-        android:text="21"/>
+        android:text="--"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"/>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/degree"
-        android:layout_alignTop="@+id/temperatureTextView"
-        android:layout_toRightOf="@+id/temperatureTextView"
-        android:layout_toEndOf="@+id/temperatureTextView"
         android:id="@+id/imageView"
-        android:layout_marginTop="50dp"/>
+        tools:layout_conversion_absoluteX="276dp"
+        tools:layout_conversion_absoluteY="245dp"
+        tools:layout_conversion_absoluteWidth="27dp"
+        tools:layout_conversion_absoluteHeight="27dp"
+        app:layout_constraintLeft_toRightOf="@+id/temperatureValue"
+        app:layout_constraintTop_toTopOf="@+id/temperatureValue"
+        android:layout_marginTop="48dp"/>
 
     <TextView
-        android:text="At 21:37 it will be"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/temperatureTextView"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/timeTextView"
+        android:id="@+id/timeLabel"
         android:textColor="#7fffffff"
-        android:textSize="18sp"/>
+        android:textSize="18sp"
+        android:text="At ... it will be"
+        tools:text="At 21:37 it will be"
+        tools:layout_conversion_absoluteX="123dp"
+        tools:layout_conversion_absoluteY="173dp"
+        tools:layout_conversion_absoluteWidth="137dp"
+        tools:layout_conversion_absoluteHeight="21dp"
+        app:layout_constraintBottom_toTopOf="@+id/temperatureValue"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"/>
 
     <TextView
-        android:text="Umeå, Sweden"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/timeTextView"
-        android:layout_centerHorizontal="true"
         android:id="@+id/locationTextView"
-        android:layout_marginBottom="60dp"
         android:textColor="@android:color/white"
-        android:textSize="24sp"/>
+        android:textSize="24sp"
+        android:text="Umeå, Sweden"
+        tools:layout_conversion_absoluteX="113dp"
+        tools:layout_conversion_absoluteY="85dp"
+        tools:layout_conversion_absoluteWidth="157dp"
+        tools:layout_conversion_absoluteHeight="28dp"
+        app:layout_constraintBottom_toTopOf="@+id/timeLabel"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/timeLabel"
+        app:layout_constraintRight_toRightOf="@+id/timeLabel"/>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/clear_day"
         android:id="@+id/iconImageView"
-        android:layout_alignBottom="@+id/locationTextView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/temperatureTextView"
-        android:weightSum="1"
-        android:id="@+id/moistureLinearLayout">
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5"
-            >
-
-            <TextView
-                android:text="HUMIDITY"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/humidityLabel"
-                android:textColor="#7fffffff"
-                android:gravity="center_horizontal"/>
-
-            <TextView
-                android:text="0.88"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/humidityValue"
-                android:textColor="@android:color/white"
-                android:textSize="24sp"
-                android:gravity="center_horizontal"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5">
-
-            <TextView
-                android:text="RAIN/SNOW?"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/precipLabel"
-                android:textColor="#7fffffff"
-                android:gravity="center_horizontal"/>
-
-            <TextView
-                android:text="100%"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/precipValue"
-                android:textColor="#FFFFFFFF"
-                android:textSize="24sp"
-                android:gravity="center_horizontal"/>
-
-        </LinearLayout>
-    </LinearLayout>
+        tools:layout_conversion_absoluteX="32dp"
+        tools:layout_conversion_absoluteY="77dp"
+        tools:layout_conversion_absoluteWidth="36dp"
+        tools:layout_conversion_absoluteHeight="36dp"
+        app:layout_constraintRight_toLeftOf="@+id/locationTextView"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintTop_toTopOf="@+id/locationTextView"
+        app:layout_constraintBottom_toBottomOf="@+id/locationTextView"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintHorizontal_bias="0.8"
+        />
 
     <TextView
-        android:text="Stormy with a chance of meatballs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/summaryTextView"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/moistureLinearLayout"
-        android:layout_marginTop="40dp"
+        android:id="@+id/humidityLabel"
+        android:textColor="#7fffffff"
+        android:gravity="center_horizontal"
+        android:text="HUMIDITY"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/temperatureValue"
+        app:layout_constraintLeft_toLeftOf="@+id/temperatureValue"
+        app:layout_constraintRight_toLeftOf="@+id/temperatureValue"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/humidityValue"
+        android:textColor="@android:color/white"
+        android:textSize="24sp"
+        android:gravity="center_horizontal"
+        tools:text="0.88"
+        android:text="--"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/humidityLabel"
+        app:layout_constraintLeft_toLeftOf="@+id/humidityLabel"
+        app:layout_constraintRight_toRightOf="@+id/humidityLabel"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/precipLabel"
+        android:textColor="#7fffffff"
+        android:gravity="center_horizontal"
+        android:text="RAIN/SNOW?"
+        app:layout_constraintRight_toRightOf="@+id/temperatureValue"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/temperatureValue"
+        app:layout_constraintLeft_toRightOf="@+id/temperatureValue"/>
+
+    <TextView
+        android:layout_width="59dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/precipValue"
+        android:textColor="#FFFFFFFF"
+        android:textSize="24sp"
+        android:gravity="center_horizontal"
+        tools:text="100%"
+        android:text="--"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/precipLabel"
+        app:layout_constraintLeft_toLeftOf="@+id/precipLabel"
+        app:layout_constraintRight_toRightOf="@+id/precipLabel"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/summaryLabel"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         android:textAlignment="center"
-        android:gravity="center_horizontal"/>
+        android:gravity="center_horizontal"
+        tools:text="Stormy with a chance of meatballs"
+        android:text="..."
+        tools:layout_conversion_absoluteX="52dp"
+        tools:layout_conversion_absoluteY="456dp"
+        tools:layout_conversion_absoluteWidth="279dp"
+        tools:layout_conversion_absoluteHeight="21dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/temperatureValue"
+        app:layout_constraintVertical_bias="0.75"/>
 
-</RelativeLayout>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/refresh"
+        android:id="@+id/refreshImageView"
+        tools:layout_conversion_absoluteX="174dp"
+        tools:layout_conversion_absoluteY="32dp"
+        tools:layout_conversion_absoluteWidth="36dp"
+        tools:layout_conversion_absoluteHeight="36dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/locationTextView"
+        android:layout_marginBottom="8dp"/>
+
+    <ProgressBar
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"
+        android:visibility="invisible"
+        tools:layout_conversion_absoluteX="168dp"
+        tools:layout_conversion_absoluteY="32dp"
+        tools:layout_conversion_absoluteWidth="48dp"
+        tools:layout_conversion_absoluteHeight="36dp"
+        app:layout_constraintTop_toTopOf="@+id/refreshImageView"
+        app:layout_constraintRight_toRightOf="@+id/refreshImageView"
+        app:layout_constraintBottom_toBottomOf="@+id/refreshImageView"
+        app:layout_constraintLeft_toLeftOf="@+id/refreshImageView"
+        tools:visibility="visible"/>
+
+</android.support.constraint.ConstraintLayout>
